@@ -94,7 +94,16 @@
 		            </table>
 				      </div>
 
-              <tal:text define="bando_text here/text">
+              <tal:text define="bando_text here/text;
+                                stato_bando view/getBandoState">
+                <div class="bandoInfos">
+                    <span tal:condition="stato_bando"
+                         tal:define="stato_class python:stato_bando[0];
+                                     stato_str python:stato_bando[1]"
+                         tal:attributes="class string:state-${stato_class} bandoStateClass">
+                        ${stato_str}
+                    </span>
+                </div>
                 <div tal:condition="bando_text"
                      tal:replace="structure bando_text/output">
                     Body text
