@@ -33,6 +33,10 @@ body.portaltype-bando {
                 padding: 1px 0 1px 1px;
                 text-decoration: underline;
             }
+
+            .bandoInfos {
+                padding: 0;
+            }
         }
     }
 }
